<?xml version="1.0"?>
<package format="2">
  <name>gps_navigation</name>
  <version>0.0.0</version>
  <description>The gps_navigation package</description>

  <maintainer email="dpazruiz@ucsd.edu">David Paz</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <author email="dpazruiz@ucsd.edu">David Paz</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>tinyxml</build_depend>
  <exec_depend>tinyxml</exec_depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
